# tgofduty

./: .gitignore  .personal.fish.conf  .personal.tmux.conf  Makefile  main.py  pyproject.toml  shell.nix
nix/: nixpkgs.nix
